# rag-starter

./: README.md  pyproject.toml
examples/: basic_usage.py
src/rag_starter/: __init__.py  chunking.py  document.py  embedder.py  pipeline.py  prompts.py  retriever.py  utils.py
src/rag_starter/adapters/: base.py  chroma.py  inmemory.py  pinecone.py  qdrant.py
tests/: test_chunking.py  test_pipeline.py
