[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-starter"
version = "0.1.0"
description = "A lightweight Python starter for retrieval-augmented generation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon Himpfen" }
]
keywords = ["rag", "retrieval-augmented-generation", "vector-db", "embeddings", "starter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.9"]
pinecone = ["pinecone>=7.0"]

[project.urls]
Homepage = "https://github.com/brandonhimpfen/rag-starter"
Repository = "https://github.com/brandonhimpfen/rag-starter"
Issues = "https://github.com/brandonhimpfen/rag-starter/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"